Refernce to Index.php
Instead of html

--- a/Creativity/Creations.html
+++ b/Creativity/Creations.html
@@ -21,7 +21,7 @@
 		
 				<div id="nav">
 					<ul>
-						<li><a href="../LifeofAtul.html">Bio</a>
+						<li><a href="../index.php">Bio</a>
 						<li><a href="../Work/Work.html">Work</a>
 						<li><a href="x.html">Adventures</a>	
 						<li><a href="../Thoughts/Thoughts.html">Thoughts</a>
