--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<head>
 		<title>Atul Saxena</title>
 		
-		<link rel="stylesheet" type="text/css" href="../css/960_12_col.css" />
+		<link rel="stylesheet" type="text/css" href="css/960_12_col.css" />
 		<link href="https://fonts.googleapis.com/css?family=Frijole" rel="stylesheet">
-		<link href="Work.css" type="text/css" rel="stylesheet" />
+		<link href="index.css" type="text/css" rel="stylesheet" />
 		
 		<meta name="description"
 			content="The Life of Atul, Online" />
@@ -24,20 +24,25 @@
 				
 				<nav id="nav">
 					<ul>
-						<li><a href="../index.php">Bio</a>
-						<li><a href="Work.html">Work</a>
+						<li><a href="index.php">Bio</a>
+						<li><a href="Work/Work.html">Work</a>
 						<li><a href="x.html">Adventures</a>	
-						<li><a href="../Thoughts/Thoughts.html">Thoughts</a>
-						<li><a href="../Quotes/Quotes.html">Quotes</a>
-						<li><a href="../Creativity/Creations.html">Creations</a>
+						<li><a href="Thoughts/Thoughts.html">Thoughts</a>
+						<li><a href="Quotes/Quotes.html">Quotes</a>
+						<li><a href="Creativity/Creations.html">Creations</a>
+						<li><a href="Testing/Testing.html">Test</a>
 					</ul>
 				</nav>
 			</div>
 			
-			<h2 id="top">Work History</h2>
+			<h2 id="top">Who Am I?</h2>
 			
 			<article id="bio" class="article grid_8">
-				
+				<p>Tao of Seneca - Practical Letters from a Stoic Master</p>
+				<p>On Saving Time</p>
+				'Whatever years be behind us are in death's hands'
+				Don't waste time idly
+				Nothing is ours except time, you cannot repay time
 			</article>	
 			
 			
@@ -46,6 +51,8 @@
 			</footer>
 			
 		</div><!-- .container12 -->
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/application.js"></script>
 	</body>
 </html>
 		
