--- a/Thoughts/Thoughts.html
+++ b/Thoughts/Thoughts.html
@@ -25,7 +25,7 @@
 		
 				<nav id="nav">
 					<ul>
-						<li><a href="../LifeofAtul.html">Bio</a>
+						<li><a href="../index.php">Bio</a>
 						<li><a href="../Work/Work.html">Work</a>
 						<li><a href="x.html">Adventures</a>	
 						<li><a href="Thoughts.html">Thoughts</a>
